<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextUserId"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/user_id"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textSize="14sp" />

        <Button
            android:id="@+id/buttonAddReading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_reading"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextSysReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/systolic_reading"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/editTextDiasReading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/diastolic_reading"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutAverage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAvgTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/avgTitle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAvgSysLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/average_systolic" />

            <TextView
                android:id="@+id/textViewAvgDiasLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/average_diastolic" />

            <TextView
                android:id="@+id/textViewAvgConditionLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/average_condition" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewAvgSystolic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAvgDiastolic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewAvgCondition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <ListView
        android:id="@+id/listViewReading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>